packages/yew-router-macro/tests/routable_derive/bad-ats-fail.stderr
error: exactly one at attribute must be present on each variant
 --> $DIR/bad-ats-fail.rs:3:5
  |
3 |     One,
  |     ^^^

error: exactly one at attribute must be present on each variant
 --> $DIR/bad-ats-fail.rs:8:5
  |
8 |     #[at("/one")]
  |     ^
