packages/yew-router-macro/tests/routable_derive/bad-ats-fail.rs
#[derive(Clone, yew_router::Routable)]
enum Routes {
    One,
}

#[derive(Clone, yew_router::Routable)]
enum RoutesTwo {
    #[at("/one")]
    #[at("/two")]
    One,
}

fn main() {}
